--- a/TASKS/index.html
+++ b/TASKS/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
 
 
-    <script src="./07-regular-function/start.js"></script>
+
+    <script>
+
+        class Comment {
+            constructor(text) {
+                this.text = text
+                this.votesQty = 0
+            }
+
+            upvote() {
+                this.votesQty += 1
+            }
+
+            static mergeComments(first, second) {
+                return `${first} ${second}`
+            }
+        }
+
+
+        const firstComment = new Comment('First comment')
+        const secondComment = new Comment('Second comment')
+        const thirdComment = new Comment('Third comment')
+
+        console.log(Comment.mergeComments('First comment.', 'Second comment.'));
+
+        console.dir(Comment)
+
+        class NumbersArray extends Array {
+            sum() {
+                return this.reduce((el, acc) => acc += el, 0)
+            }
+        }
+
+        const myArr = new NumbersArray(2, 5, 7)
+
+        console.log(myArr);
+        console.log(myArr.sum());
+
+        const myArr2 = new NumbersArray(1, 3, 4)
+
+        console.log(myArr2.sum());
+
+        console.log(myArr.__proto__);
+        console.log(NumbersArray.prototype);
+
+        const myName = 'Alex'
+        console.log(myName.charAt(0));
+
+        const num = 10
+        console.log(num.toString());
+    </script>
 </body>
+
 </html>
