--- a/TASKS/index.html
+++ b/TASKS/index.html
@@ -13,54 +13,110 @@
 
     <script>
 
-        class Comment {
-            constructor(text) {
-                this.text = text
-                this.votesQty = 0
-            }
+        // class Comment {
+        //     constructor(text) {
+        //         this.text = text
+        //         this.votesQty = 0
+        //     }
 
-            upvote() {
-                this.votesQty += 1
-            }
+        //     upvote() {
+        //         this.votesQty += 1
+        //     }
 
-            static mergeComments(first, second) {
-                return `${first} ${second}`
-            }
-        }
+        //     static mergeComments(first, second) {
+        //         return `${first} ${second}`
+        //     }
+        // }
 
 
-        const firstComment = new Comment('First comment')
-        const secondComment = new Comment('Second comment')
-        const thirdComment = new Comment('Third comment')
+        // const firstComment = new Comment('First comment')
+        // const secondComment = new Comment('Second comment')
+        // const thirdComment = new Comment('Third comment')
 
-        console.log(Comment.mergeComments('First comment.', 'Second comment.'));
+        // console.log(Comment.mergeComments('First comment.', 'Second comment.'));
 
-        console.dir(Comment)
+        // console.dir(Comment)
 
-        class NumbersArray extends Array {
-            sum() {
-                return this.reduce((el, acc) => acc += el, 0)
-            }
-        }
+        // class NumbersArray extends Array {
+        //     sum() {
+        //         return this.reduce((el, acc) => acc += el, 0)
+        //     }
+        // }
 
-        const myArr = new NumbersArray(2, 5, 7)
+        // const myArr = new NumbersArray(2, 5, 7)
 
-        console.log(myArr);
-        console.log(myArr.sum());
+        // console.log(myArr);
+        // console.log(myArr.sum());
 
-        const myArr2 = new NumbersArray(1, 3, 4)
+        // const myArr2 = new NumbersArray(1, 3, 4)
 
-        console.log(myArr2.sum());
+        // console.log(myArr2.sum());
 
-        console.log(myArr.__proto__);
-        console.log(NumbersArray.prototype);
+        // console.log(myArr.__proto__);
+        // console.log(NumbersArray.prototype);
 
-        const myName = 'Alex'
-        console.log(myName.charAt(0));
+        // const myName = 'Alex'
+        // console.log(myName.charAt(0));
 
-        const num = 10
-        console.log(num.toString());
+        // const num = 10
+        // console.log(num.toString());
+
+        // PROMISES
+
+        const myPromise = new Promise((resolve, reject) => {
+
+        })
+
+        // console.log(myPromise.);
+
+        // fetch('https://jsonplaceholder.typicode.com/posts')
+        //     .then((response) => {
+        //         console.log(response)
+        //         return response.json()
+        //     })
+        //     .then((data) => console.log(data))
+        //     .catch(error => console.log(error))
+
+
+        // async/await
+
+        // const asyncFn = async () => {
+        //     return 'Hello world'
+        // }
+
+
+        // asyncFn()
+        // .then(data => console.log(data))
+
+        // const timerPromise = () =>
+        //     new Promise((resolve, reject) =>
+        //         setTimeout(() => resolve(), 2000))
+
+        // timerPromise()
+
+        // const asyncFn = async () => {
+        //     console.log('Timer starts');
+        //     const startTime = performance.now()
+        //     await timerPromise()
+        //     const endTime = performance.now()
+        //     console.log('Timer ended', endTime - startTime);
+        // }
+
+        // asyncFn()
+
+        // const getData = async (url) => {
+        //     const res = await fetch(url)
+        //     const json = await res.json()
+        //     .then(data => console.log(data))
+        // }
+
+        // const url = 'https://jsonplaceholder.typicode.com/posts'
+
+        // getData(url)
     </script>
+    <!-- <script src="./09-arrow-function/start.js"></script> -->
+    <script src="./10-jsdoc/start.js"></script>
+    <script src="./11-callback-function/start.js"></script>
 </body>
 
 </html>
