--- a/TASKS/index.html
+++ b/TASKS/index.html
@@ -63,9 +63,9 @@
 
         // PROMISES
 
-        const myPromise = new Promise((resolve, reject) => {
+        // const myPromise = new Promise((resolve, reject) => {
 
-        })
+        // })
 
         // console.log(myPromise.);
 
@@ -115,8 +115,36 @@
         // getData(url)
     </script>
     <!-- <script src="./09-arrow-function/start.js"></script> -->
-    <script src="./10-jsdoc/start.js"></script>
-    <script src="./11-callback-function/start.js"></script>
+    <!-- <script src="./10-jsdoc/start.js"></script> -->
+    <!-- <script src="./11-callback-function/start.js"></script> -->
+    <!-- <script src="./12-create-object/start.js"></script> -->
+    <!-- <script src="./13-string-length/start.js"></script> -->
+    <!-- <script src="./14-uppercase-string/start.js"></script> -->
+    <!-- <script src="./15-replace-part-string/start.js"></script> -->
+    <!-- <script src="./16-create-array/start.js"></script> -->
+    <!-- <script src="./17-replace-element-array/start.js"></script> -->
+    <!-- <script src="./18-iterate-over-array/start.js"></script> -->
+    <!-- <script src="./19-push-to-array/start.js"></script> -->
+    <!-- <script src="./20-date/start.js"></script> -->
+    <script src="./21-compare-variables/start.js"></script>
+    <!-- <script src="./22-division-remainder/start.js"></script> -->
+    <!-- <script src="./23-or-and-operators/start.js"></script> -->
+    <!-- <script src="./24-alternative-binary-operators/start.js"></script> -->
+    <!-- <script src="./25-expression-or-statement/start.js"></script> -->
+    <!-- <script src="./26-what-will-be-logged/start.js"></script> -->
+    <!-- <script src="./27-const/start.js"></script> -->
+    <!-- <script src="./28-let/start.js"></script> -->
+    <!-- <script src="./29-strict-mode/start.js"></script> -->
+    <!-- <script src="./30-callback-function/start.js"></script> -->
+    <!-- <script src="./31-intervals-timeouts/start.js"></script> -->
+    <!-- <script src="./32-add-start-of-the-array/start.js"></script> -->
+    <!-- <script src="./33-add-at-index-array/start.js"></script> -->
+    <!-- <script src="./34-array-of-objects/start.js"></script> -->
+    <!-- <script src="./35-object-iteration/start.js"></script> -->
+    <!-- <script src="./36-random-numbers/start.js"></script> -->
+    <!-- <script src="./37-for-in-loop/start.js"></script> -->
+    <!-- <script src="./38-ternary-operator/start.js"></script> -->
+    <!-- <script src="./39-foreach-with-index/start.js"></script> -->
 </body>
 
 </html>
